// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DatetimeBox Appointment Example 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox131wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox131-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox131-error"
        role="region"
      >
        
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox135wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox135-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox135-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox Birthdate Example 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox Initial 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox8wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox8-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox8-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props hidden 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
/>
`;

exports[`Storyshots DatetimeBox With props is24 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox39wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox39-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox39-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props isDateOnly true 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props isTimeRange and disabled 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField is-disabled textField-88"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-89"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-90"
                  disabled={true}
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label icon-94"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox is-disabled css-95"
        id="ComboBox17wrapper"
      >
        <input
          aria-autocomplete="none"
          aria-disabled={true}
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-96"
          data-is-interactable={false}
          data-lpignore={true}
          id="ComboBox17-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-hidden={true}
          className="ms-Button ms-Button--icon is-disabled ms-ComboBox-CaretDown-button root-97"
          data-is-focusable={false}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-98"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox17-error"
        role="region"
      >
        
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox is-disabled css-95"
        id="ComboBox21wrapper"
      >
        <input
          aria-autocomplete="none"
          aria-disabled={true}
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-96"
          data-is-interactable={false}
          data-lpignore={true}
          id="ComboBox21-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-hidden={true}
          className="ms-Button ms-Button--icon is-disabled ms-ComboBox-CaretDown-button root-97"
          data-is-focusable={false}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-98"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox21-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props isTimeRange and onSelectDatetime 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox89wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox89-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox89-error"
        role="region"
      >
        
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox93wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox93-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox93-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props isTimeRange, isMenual and onSelectDatetime 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
      dir="ltr"
    >
      <div
        className="ms-Stack css-51"
      >
        <div
          className="ms-TextField root-101"
        >
          <div
            className="ms-TextField-wrapper wrapper-59"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-60"
            >
              <input
                aria-invalid={false}
                className="ms-TextField-field field-102"
                id="TextField102"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                type="text"
                value="__:__"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-Dropdown-container root-103"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            className="ms-Dropdown dropdown-105"
            data-is-focusable={true}
            id="Dropdown105"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <span
              aria-atomic={true}
              aria-invalid={false}
              aria-live="polite"
              aria-setsize={0}
              className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-106"
              id="Dropdown105-option"
              role="option"
            >
              --
            </span>
            <span
              className="ms-Dropdown-caretDownWrapper caretDownWrapper-107"
            >
              <i
                aria-hidden={true}
                className="ms-Dropdown-caretDown caretDown-121"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
      dir="ltr"
    >
      <div
        className="ms-Stack css-51"
      >
        <div
          className="ms-TextField root-101"
        >
          <div
            className="ms-TextField-wrapper wrapper-59"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-60"
            >
              <input
                aria-invalid={false}
                className="ms-TextField-field field-102"
                id="TextField106"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                type="text"
                value="__:__"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-Dropdown-container root-103"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            className="ms-Dropdown dropdown-105"
            data-is-focusable={true}
            id="Dropdown109"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <span
              aria-atomic={true}
              aria-invalid={false}
              aria-live="polite"
              aria-setsize={0}
              className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-106"
              id="Dropdown109-option"
              role="option"
            >
              --
            </span>
            <span
              className="ms-Dropdown-caretDownWrapper caretDownWrapper-107"
            >
              <i
                aria-hidden={true}
                className="ms-Dropdown-caretDown caretDown-121"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props isTimeRange, isMenual, is24 and onSelectDatetime 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
      dir="ltr"
    >
      <div
        className="ms-Stack css-51"
      >
        <div
          className="ms-TextField root-101"
        >
          <div
            className="ms-TextField-wrapper wrapper-59"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-60"
            >
              <input
                aria-invalid={false}
                className="ms-TextField-field field-102"
                id="TextField115"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                type="text"
                value="__:__"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
      dir="ltr"
    >
      <div
        className="ms-Stack css-51"
      >
        <div
          className="ms-TextField root-101"
        >
          <div
            className="ms-TextField-wrapper wrapper-59"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-60"
            >
              <input
                aria-invalid={false}
                className="ms-TextField-field field-102"
                id="TextField118"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                type="text"
                value="__:__"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props label Label 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <label
                className="ms-Label root-100"
                htmlFor="datetimeBox1-label"
                id="TextFieldLabel29"
              >
                Label
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel29"
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--with-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <label
        className="ms-Label root-100"
        id="ComboBox30-label"
      >
        _
      </label>
      <div
        className="ms-ComboBox css-69"
        id="ComboBox30wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          aria-labelledby="ComboBox30-label"
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox30-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox30-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props onSelectDatetime 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox75wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox75-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox75-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props tooltip I am a Tooltip 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox66wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox66-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox66-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props value Date 1/1/2020 13:00 Military 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox57wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox57-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox57-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatetimeBox With props value Date 1/1/2020 13:00 Standard 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TooltipHost root-52"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="ms-DatePicker root-53"
        id="datetimeBox1"
      >
        <div
          aria-haspopup="true"
        >
          <div
            className="ms-TextField textField-58"
          >
            <div
              className="ms-TextField-wrapper wrapper-59"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-60"
              >
                <input
                  aria-expanded={false}
                  aria-invalid={false}
                  className="ms-TextField-field field-61"
                  id="datetimeBox1-label"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="---"
                  readOnly={false}
                  required={false}
                  role="combobox"
                  type="text"
                  value=""
                />
                <i
                  aria-hidden={true}
                  className="ms-DatePicker-event--without-label msDatePickerDisabled icon-68"
                  data-icon-name="Calendar"
                  onClick={[Function]}
                >
                  
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-ComboBox-container "
    >
      <div
        className="ms-ComboBox css-69"
        id="ComboBox48wrapper"
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          autoCapitalize="off"
          autoComplete="off"
          className="ms-ComboBox-Input css-70"
          data-is-interactable={true}
          data-lpignore={true}
          id="ComboBox48-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onCompositionUpdate={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchStart={[Function]}
          readOnly={true}
          role="combobox"
          spellCheck={false}
          type="text"
          value=""
        />
        <button
          aria-hidden={true}
          className="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-77"
          data-is-focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="presentation"
          tabIndex={-1}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-78"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-85 ms-Button-icon icon-80"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <div
        aria-atomic="true"
        aria-live="polite"
        className=""
        id="ComboBox48-error"
        role="region"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ManualTimeBox Initial 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TextField root-101"
    >
      <div
        className="ms-TextField-wrapper wrapper-59"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-60"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-102"
            id="TextField139"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="__:__"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-Dropdown-container root-103"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown dropdown-105"
        data-is-focusable={true}
        id="Dropdown142"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <span
          aria-atomic={true}
          aria-invalid={false}
          aria-live="polite"
          aria-setsize={0}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-106"
          id="Dropdown142-option"
          role="option"
        >
          --
        </span>
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-107"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-121"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ManualTimeBox With props disabled 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TextField is-disabled root-101"
    >
      <div
        className="ms-TextField-wrapper wrapper-59"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-89"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-123"
            disabled={true}
            id="TextField154"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="__:__"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-Dropdown-container root-103"
    >
      <div
        aria-disabled={true}
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown is-disabled dropdown-124"
        data-is-focusable={false}
        id="Dropdown157"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <span
          aria-atomic={true}
          aria-invalid={false}
          aria-live="polite"
          aria-setsize={0}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-125"
          id="Dropdown157-option"
          role="option"
        >
          --
        </span>
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-126"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-128"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ManualTimeBox With props is24 and value 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TextField root-101"
    >
      <div
        className="ms-TextField-wrapper wrapper-59"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-60"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-102"
            id="TextField151"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="__:__"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ManualTimeBox With props label Label 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TextField root-101"
    >
      <div
        className="ms-TextField-wrapper wrapper-59"
      >
        <label
          className="ms-Label root-100"
          htmlFor="TextField143"
          id="TextFieldLabel145"
        >
          Label
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup-60"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel145"
            className="ms-TextField-field field-102"
            id="TextField143"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="__:__"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-Dropdown-container root-103"
    >
      <label
        className="ms-Label ms-Dropdown-label label-122"
        id="Dropdown146-label"
      >
        _
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="Dropdown146-label Dropdown146-option"
        className="ms-Dropdown dropdown-105"
        data-is-focusable={true}
        id="Dropdown146"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <span
          aria-atomic={true}
          aria-invalid={false}
          aria-live="polite"
          aria-setsize={0}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-106"
          id="Dropdown146-option"
          role="option"
        >
          --
        </span>
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-107"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-121"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ManualTimeBox With props onTimeChange 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TextField root-101"
    >
      <div
        className="ms-TextField-wrapper wrapper-59"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-60"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-102"
            id="TextField158"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="__:__"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-Dropdown-container root-103"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown dropdown-105"
        data-is-focusable={true}
        id="Dropdown161"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <span
          aria-atomic={true}
          aria-invalid={false}
          aria-live="polite"
          aria-setsize={0}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-106"
          id="Dropdown161-option"
          role="option"
        >
          --
        </span>
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-107"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-121"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ManualTimeBox With props value 1`] = `
<div
  className="ms-Fabric is-focusHidden ms-Fabric--isFocusHidden root-49"
  dir="ltr"
>
  <div
    className="ms-Stack css-51"
  >
    <div
      className="ms-TextField root-101"
    >
      <div
        className="ms-TextField-wrapper wrapper-59"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-60"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-102"
            id="TextField147"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="__:__"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-Dropdown-container root-103"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown dropdown-105"
        data-is-focusable={true}
        id="Dropdown150"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <span
          aria-atomic={true}
          aria-invalid={false}
          aria-live="polite"
          aria-setsize={0}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-106"
          id="Dropdown150-option"
          role="option"
        >
          --
        </span>
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-107"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-121"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;
